# dot

./: .gitignore  AbstractLink.cpp  AbstractLink.h  AbstractSwitch.cpp  AbstractSwitch.h  AbstractVM.cpp  AbstractVM.h  CommandExecutor.cpp  CommandExecutor.h  Configurations.cpp  Configurations.h  ControllerInfo_alpha  Controllers.cpp  Controllers.h  CredentialFile_alpha  Credentials.cpp  Credentials.h  CutEdge.cpp  CutEdge.h  DOT.cpp  DOTTopology.cpp  DOTTopology.h  DefaultConfiguration  DeployDOT.cpp  DeployDOT.h  EmbeddingAlgorithm.cpp  EmbeddingAlgorithm.h  GREInterface.cpp  GREInterface.h  Global.cpp  Global.h  GuaranteedEmbedding.cpp  GuaranteedEmbedding.h  Guaranteed_Embedding_Conf  GuranteedEmbedding.cpp  GuranteedEmbedding.h  HostAttachment.cpp  HostAttachment.h  HostInfo_1221  HostInfo_alpha  (+107 more)
SyncDB/: db.lck  service.properties
SyncDB/log/: log.ctrl
autom4te.cache/: output.1  traces.0  traces.1
configurations/log/: logConfig.xml
create_conf/: Alpha2Conf  AlphaConf  AlphaConf.bak  BT-strawman  BTRTRTopoB  BTRTRTopoB.1  CreateConf.cpp  ExampleWANConf1.0.txt  ScriptTestConf  Sig1.0_IB_Conf  Sig1.0_MiddleBoxConf  Sig1.3Conf  Sig1.3LargeConf  WithLoop2Conf  WithLoopConf  conf_util
emulations/BT-strawman/: DefaultConfiguration_BT-strawman  HostInfo_BT-strawman  LogicalTopology_BT-strawman  Switch2Controller_BT-strawman
emulations/BTRTRTopoB/: HostInfo_BTRTRTopoB  (+6 more)
ongoing_emulation/: clean_machine.sh  ctrl_mapping  dot_access  dot_console  image_username  link_mapping  mapping  switch_mapping
resources/: hostname
src/: dot.cpp  dotcore.cpp  dotcore.h
(+304 files in other folders)
