#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([dot], [1.0])
AC_CONFIG_SRCDIR([src/dot.cpp])
AC_CONFIG_HEADERS([src/build_config/config.h])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([1.11 foreign silent-rules subdir-objects -Wall -Werror])
AC_CONFIG_FILES([Makefile])


# Checks for programs.
AC_PROG_CXX

# Checks for libraries.


# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
